force-app/main/default/objects/Lead/fields/Account_Zero_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Zero_Id__c</fullName>
    <description>Unique key generated in Zero.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique key generated in Zero.</inlineHelpText>
    <label>Account Zero Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>