force-app/main/default/objects/Lead/fields/Call_Permission__c.field-meta.xml
<CustomField>
    <fullName>Call_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If permission was given to call by this Contact, this field will be checked True by Market Sync</description>
    <inlineHelpText>If permission was given to call by this Contact, this field will be checked True by Market Sync</inlineHelpText>
    <label>Call Permission</label>
    <type>Checkbox</type>
</CustomField>