force-app/main/default/objects/Lead/fields/Contact_Zero_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zero_External_Id__c</fullName>
    <description>A unique key from Zero.</description>
    <inlineHelpText>A unique key from Zero.</inlineHelpText>
    <label>Contact Zero External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>