force-app/main/default/objects/Lead/fields/DK_Trial_request_contact__c.field-meta.xml
<CustomField>
    <fullName>DK_Trial_request_contact__c</fullName>
    <description>Use in trial form to add when prospect wants sales to call back</description>
    <inlineHelpText>Use in trial form to add when prospect wants sales to call back</inlineHelpText>
    <label>DK - Trial request contact</label>
    <type>TextArea</type>
</CustomField>