force-app/main/default/objects/Lead/fields/DK_Trial_request_portals__c.field-meta.xml
<CustomField>
    <fullName>DK_Trial_request_portals__c</fullName>
    <description>Trial message from Marketo</description>
    <inlineHelpText>Trial message from Marketo</inlineHelpText>
    <label>Trial request portals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>