force-app/main/default/objects/Lead/fields/Email_Permission__c.field-meta.xml
<CustomField>
    <fullName>Email_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If permission was given to Email by this Contact, this field will be checked True by Market Sync</description>
    <inlineHelpText>If permission was given to Email by this Contact, this field will be checked True by Market Sync</inlineHelpText>
    <label>Email Permission</label>
    <type>Checkbox</type>
</CustomField>