force-app/main/default/objects/Lead/fields/First_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Trial_Date__c</fullName>
    <label>First Trial Date</label>
    <type>Date</type>
</CustomField>