force-app/main/default/objects/Lead/fields/Last_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Trial_Date__c</fullName>
    <label>Last Trial Date</label>
    <type>Date</type>
</CustomField>