force-app/main/default/objects/Lead/fields/Marketo_Delete_LEAD__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Delete_LEAD__c</fullName>
    <label>Marketo Delete (LEAD)</label>
    <type>Date</type>
</CustomField>