force-app/main/default/objects/Lead/fields/Marketo_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sync with marketo checkbox</description>
    <label>Marketo Sync</label>
    <type>Checkbox</type>
</CustomField>