force-app/main/default/objects/Lead/fields/mkto_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto_Last_Login_Date__c</fullName>
    <description>sync from marketo</description>
    <inlineHelpText>sync from marketo</inlineHelpText>
    <label>Last Login Date</label>
    <type>Date</type>
</CustomField>