force-app/main/default/objects/Lead/fields/mkto_Login_Count_90_days__c.field-meta.xml
<CustomField>
    <fullName>mkto_Login_Count_90_days__c</fullName>
    <description>sync from marketo</description>
    <inlineHelpText>sync from marketo</inlineHelpText>
    <label>Login Count - 90 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>