force-app/main/default/objects/Lead/fields/Product_on_Trial__c.field-meta.xml
<CustomField>
    <fullName>Product_on_Trial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lead</description>
    <inlineHelpText>This lead has a one month trial on this product.</inlineHelpText>
    <label>Product on Trial</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>