force-app/main/default/objects/Lead/fields/Trial_Subscription_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Trial_Subscription_Number_2__c</fullName>
    <label>Trial Sub. Number (map oppy)</label>
    <type>TextArea</type>
</CustomField>