force-app/main/default/objects/Lead/fields/Trial_Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Trial_Subscription_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial Subscription Number</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Trial Subscription Number</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>