force-app/main/default/objects/Lead/fields/Was_created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Was_created_from_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>field created to simplify visibility on opportunity i.e. to be able to quickly see if Opportunity was created from Lead or not.
Field might not be needed so evaluate and delete if needed / Victoria</description>
    <label>Was created from Lead</label>
    <type>Checkbox</type>
</CustomField>