force-app/main/default/objects/Lead/recordTypes/Standard_Lead.recordType-meta.xml
<RecordType>
    <fullName>Standard_Lead</fullName>
    <active>true</active>
    <businessProcess>Standard Lead Process</businessProcess>
    <description>Lead created manually or NOT by a Trial Subscription</description>
    <label>Standard Lead</label>
</RecordType>