force-app/main/default/objects/Lead/recordTypes/Trial_Lead.recordType-meta.xml
<RecordType>
    <fullName>Trial_Lead</fullName>
    <active>true</active>
    <businessProcess>Trial Lead Process</businessProcess>
    <description>Lead created when a Subscription is created in Salesforce from Zero</description>
    <label>Trial Lead</label>
</RecordType>