force-app/main/default/objects/Lead/listViews/Deal_Desk_Lead.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Desk</label>
    <queue>Deal_Desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>