force-app/main/default/objects/Lead/listViews/New_Trial_Subscription_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>New_Trial_Subscription_Leads_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>New Trial Subscription Leads</label>
    <queue>New_Trial_Subscription_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>