force-app/main/default/objects/Lead/listViews/Trials_DK_Kenneth.listView-meta.xml
<ListView>
    <fullName>Trials_DK_Kenneth</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>DK_Trial_request_portals__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>MQL,Recycle,Fake</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>Albertslund,Allerød,Bornholm,Faxe,Brøndby,Greve,Hvidovre,Høje-Taastrup,Lejre,Rødovre,Sorø,Stevns,Tårnby,Ballerup,Helsingør,Køge,Frederikssund,Halsnæs,Hillerød,Gentofte,Solrød</value>
    </filters>
    <label>Trials DK - Kenneth</label>
    <sharedTo>
        <group>Sales_Denmark</group>
    </sharedTo>
</ListView>