force-app/main/default/objects/Lead/listViews/Trials_DK_Maria.listView-meta.xml
<ListView>
    <fullName>Trials_DK_Maria</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>DK_Trial_request_portals__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>MQL,Recycle,Fake</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>Esbjerg,Grønland,færøerne,Hedensted,Hjørring,Horsens,Ikast-Brande,Jammerbugt,Rebild,Mariagerfjord,Ringkøbing-Skjern,Sønderborg,Varde,Vejen,Favrskov,Odense</value>
    </filters>
    <label>Trials DK - Maria</label>
    <sharedTo>
        <group>Sales_Denmark</group>
    </sharedTo>
</ListView>