force-app/main/default/objects/Lead/listViews/Trials_DK_Other.listView-meta.xml
<ListView>
    <fullName>Trials_DK_Other</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>DK_Trial_request_portals__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>MQL,Recycle,Fake</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notEqual</operation>
        <value>Aalborg,Aarhus,Viborg,Struer,Skive,Silkeborg,Randers,Lemvig,Odder,Morsø,Fanø,Sydslevig,Læsø,Billund</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notEqual</operation>
        <value>Egedal,Fredensborg,Ishøj,Vallensbæk,Glostrup,Holbæk,Vordingborg,Slagelse,Guldborgsund,Lolland,Kalundborg,Ringsted,Næstved,Kerteminde,Nyborg,Nordfyn,Svendborg,Langeland,Faaborg-Midtfyn,Ærø,Assens</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notEqual</operation>
        <value>Vesthimmerlands,Aabenraa,Kolding,Norddjurs,Syddjurs,Tønder,Thisted,Herning,Brønderslev,Samsø,Fredericia,Holstebro,Frederikshavn,Skanderborg,Haderslev,Vejle,Middelfart</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notEqual</operation>
        <value>Dragør,Furesø,Gribskov,Herlev,København,Lyngby-Taarbæk,Odsherred,Rudersdal,Frederiksberg,Roskilde,Gladsaxe,Glostrup</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notEqual</operation>
        <value>Albertslund,Allerød,Bornholm,Faxe,Brøndby,Greve,Hvidovre,Høje-Taastrup,Lejre,Rødovre,Sorø,Stevns,Tårnby,Ballerup,Helsingør,Køge,Frederikssund,Halsnæs,Hillerød,Gentofte,Solrød</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>notEqual</operation>
        <value>Esbjerg,Grønland,færøerne,Hedensted,Hjørring,Horsens,Ikast-Brande,Jammerbugt,Rebild,Mariagerfjord,Ringkøbing-Skjern,Sønderborg,Varde,Vejen,Favrskov,Odense</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <label>Trials DK - Other</label>
    <sharedTo>
        <group>Sales_Denmark</group>
    </sharedTo>
</ListView>